crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__replay_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: "sanitize_json(&serde_json::to_value(&replay).unwrap())"
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_<REDACTED>",
        "req": {
          "created_at": "<TIMESTAMP>",
          "event": {
            "history_event": {
              "event": {
                "join_set_id": "g:1",
                "type": "join_set_create"
              }
            }
          }
        },
        "version": 2
      }
    },
    {
      "AppendBatchCreateNewExecution": {
        "backtraces": [
          {
            "component_id": {
              "component_digest": "sha256:<REDACTED>",
              "component_type": "workflow",
              "name": "test_js_workflow"
            },
            "execution_id": "E_<REDACTED>",
            "version_max_excluding": 4,
            "version_min_including": 3,
            "wasm_backtrace": {
              "frames": [
                {
                  "func_name": "call_stub",
                  "module": "unknown",
                  "symbols": [
                    {
                      "col": 37,
                      "file": null,
                      "func_name": null,
                      "line": 4
                    }
                  ]
                }
              ]
            }
          }
        ],
        "batch": [
          {
            "created_at": "<TIMESTAMP>",
            "event": {
              "history_event": {
                "event": {
                  "join_set_id": "g:1",
                  "request": {
                    "child_execution_id": "E_<REDACTED>",
                    "params": [
                      "test-input"
                    ],
                    "result": {
                      "Ok": null
                    },
                    "target_ffqn": "testing:stub-activity/activity.foo",
                    "type": "child_execution_request"
                  },
                  "type": "join_set_request"
                }
              }
            }
          }
        ],
        "child_req": [
          {
            "component_id": {
              "component_digest": "sha256:<REDACTED>",
              "component_type": "activity_stub",
              "name": ""
            },
            "created_at": "<TIMESTAMP>",
            "deployment_id": "Dep_<REDACTED>",
            "execution_id": "E_<REDACTED>",
            "ffqn": "testing:stub-activity/activity.foo",
            "metadata": {},
            "params": [
              "test-input"
            ],
            "parent": [
              "E_<REDACTED>",
              "g:1"
            ],
            "paused": false,
            "scheduled_at": "<TIMESTAMP>",
            "scheduled_by": null
          }
        ],
        "current_time": "<TIMESTAMP>",
        "execution_id": "E_<REDACTED>",
        "version": 3
      }
    }
  ]
}
