crates/wasm-workers/src/workflow/snapshots/obeli_sk_wasm_workers__workflow__workflow_js_worker__tests__replay_Memory_1.snap
---
source: crates/wasm-workers/src/workflow/workflow_js_worker.rs
expression: replay
---
{
  "captured_writes": [
    {
      "Append": {
        "execution_id": "E_00000000000000000000000000",
        "version": 2,
        "req": {
          "created_at": "1970-01-01T00:00:00Z",
          "event": {
            "history_event": {
              "event": {
                "type": "join_set_create",
                "join_set_id": "g:1"
              }
            }
          }
        }
      }
    },
    {
      "AppendBatchCreateNewExecution": {
        "current_time": "1970-01-01T00:00:00Z",
        "batch": [
          {
            "created_at": "1970-01-01T00:00:00Z",
            "event": {
              "history_event": {
                "event": {
                  "type": "join_set_request",
                  "join_set_id": "g:1",
                  "request": {
                    "type": "child_execution_request",
                    "child_execution_id": "E_00000000000000000000000000.g:1_1",
                    "target_ffqn": "testing:stub-activity/activity.foo",
                    "params": [
                      "test-input"
                    ],
                    "result": {
                      "Ok": null
                    }
                  }
                }
              }
            }
          }
        ],
        "execution_id": "E_00000000000000000000000000",
        "version": 3,
        "child_req": [
          {
            "created_at": "1970-01-01T00:00:00Z",
            "execution_id": "E_00000000000000000000000000.g:1_1",
            "ffqn": "testing:stub-activity/activity.foo",
            "params": [
              "test-input"
            ],
            "parent": [
              "E_00000000000000000000000000",
              "g:1"
            ],
            "scheduled_at": "1970-01-01T00:00:00Z",
            "component_id": {
              "component_type": "activity_stub",
              "name": "",
              "component_digest": "sha256:72c42a985d504c9f95f02d31004987ddff06c31d1bb4469fb346765852d2621c"
            },
            "deployment_id": "Dep_00000000000000000000000000",
            "metadata": {},
            "scheduled_by": null,
            "paused": false
          }
        ],
        "backtraces": [
          {
            "execution_id": "E_00000000000000000000000000",
            "component_id": {
              "component_type": "workflow",
              "name": "test_js_workflow",
              "component_digest": "sha256:3e0808b09be4044690fcffb284fc161828e8deba70709c3afa6cf5732a53b759"
            },
            "version_min_including": 3,
            "version_max_excluding": 4,
            "wasm_backtrace": {
              "frames": [
                {
                  "module": "unknown",
                  "func_name": "call_stub",
                  "symbols": [
                    {
                      "func_name": null,
                      "file": null,
                      "line": 4,
                      "col": 37
                    }
                  ]
                }
              ]
            }
          }
        ]
      }
    }
  ]
}
